syntax = "proto3";

package ops;

import "google/protobuf/empty.proto";

service Deploy {
    rpc GetTargets (google.protobuf.Empty) returns (TargetOutbound);
    rpc GetBranches (BranchInbound) returns (BranchOutbound);
    rpc Execute(DeployInbound) returns (stream DeployOutbound);
}

message Target{
    string repo = 1;
    string pkg = 2;
}

message TargetOutbound {
    repeated Target targets = 1;
}

message Branch{
    string name = 1;
}

message BranchInbound {
    string owner = 1;
    string repository = 2;
}

message BranchOutbound {
    repeated Branch branches = 1;
}

message DeployInbound {
    string owner = 1;
    string repository = 2;
    string branch = 3;
    string package = 4;
}

message DeployOutbound {
    string title = 1;
    string message = 2;
    DeployProgress progress = 3;
}

enum DeployProgress {
    STARTED = 0;
    RUNNING = 1;
    SUCCESS = 2;
    ERROR = 3;
}
